--- a/kdr_provider_op.qmd
+++ b/kdr_provider_op.qmd
@@ -167,7 +167,7 @@ ltr<-kd2 %>%
   rename('Top-Box Score (Percentile Rank)' = tbscore_rank)
 ```
 
-<!-- #### `r name_filter` (NPI: `r params$npi`) -->
+#### `r name_filter` (NPI: `r params$npi`)
 
 ```{r}
 #| echo: false
@@ -200,11 +200,9 @@ The table lists the top ten survey questions, sorted in order of priority, that 
 
 -   This summarizes the results of ***`r ltr[,4]`*** surveys received between ***`r min(data$newdate)`*** and ***`r max(data$newdate)`***.
 
--   The sample count of ***`r ltr[,4]`*** surveys `r (if(ltr[,4] > 29 ) {print("fulfills")} else if (ltr[,4] < 30) {print("fails to fulfill")})` the minimum sample size requirements.
-
 -   The percentile rank is an internal rank that compares all physicians within the service line. For example, a percentile rank of 90 means the score is in the top 10 percent of all physicians.
 
--   The correlation measures the strength of the linear association between the response to the institutional measure and the question of interest.
+-   The correlation measures the strength of the linear association between the response to the institutional measure and the question of interest. The survey count of `r ltr[,4]` *`r (if(ltr[,4] > 29 ) {print("meets")} else if (ltr[,4] < 30) {print("fails to meet")})`* the minimum number of surveys required to come to a *statistically sound conclusion.*
 
 -   The top box ratio calculates the likelihood of giving the top box score for the institutional measure, given the score is a top box for the question of interest.
 
